--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
       <i class="bi bi-joystick" style="font-size: 30px"></i>Games </button>
     <button class="btn-main" anim="ripple" onclick="send('/apps')">
       <i class="bi bi-grid-fill" style="font-size: 30px"></i>Apps</button><br />
-    <a href="#" class="title" anim="ripple"><img src="/assets/img/doge2.jpg" style="width: 22px; height: 22px" id="logo" /> Doge Unblocker</a>
+    <a href="#" class="title" anim="ripple"><img src="/assets/img/doge2.jpg" style="width: 22px; height: 22px" id="logo" /> st0necuuter</a>
   </nav>
   <div style="text-align: center; color: white; margin-top: 80px; z-index: 1" class="themesExcluded">
     <div class="themesExcluded">
