--- a/static/index.html
+++ b/static/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="noindex" />
-  <link rel="icon" id="icon" href="/assets/img/salyte.jpg" />
+  <link rel="icon" id="icon" href="/assets/img/st0necutterlogo.jpg" />
   <script src="/assets/js/cdn-rocket.js?v=1.8" defer></script>
   <link rel="stylesheet" href="/assets/css/app.css?v=1.8" />
   <link rel="stylesheet" href="/assets/css/menu.css?v=1.8" />
   <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js?v=1.8"></script>
   <script src="/assets/js/anym.js?v=1.8"></script>
-  <title>Dashboard | Salyte</title>
+  <title>st0necutter/title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-6YEQ7Q0XRC"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -51,7 +51,7 @@
       <i class="bi bi-joystick" style="font-size: 30px"></i>Games </button>
     <button class="btn-main" anim="ripple" onclick="send('/apps')">
       <i class="bi bi-grid-fill" style="font-size: 30px"></i>Apps</button><br />
-    <a href="#" class="title" anim="ripple"><img src="/assets/img/doge2.jpg" style="width: 22px; height: 22px" id="logo" /> st0necuuter</a>
+    <a href="#" class="title" anim="ripple"><img src="/assets/img/st0necutterlogo.jpg" style="width: 22px; height: 22px" id="logo" /> st0necuuter</a>
   </nav>
   <div style="text-align: center; color: white; margin-top: 80px; z-index: 1" class="themesExcluded">
     <div class="themesExcluded">
