--- a/static/info.html
+++ b/static/info.html
@@ -27,7 +27,7 @@
   text-align: center;
 }
 </style>
-<title>Learn | Salyte</title>
+<title>st0necutter- info</title>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6YEQ7Q0XRC"></script>
 <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-6YEQ7Q0XRC');</script>
 </head>
@@ -37,7 +37,7 @@
   <h1 style="font-size:68px;">Information</h1>
   <div class="themesExcluded">
     <h2>Website</h2>
-    <p>Doge Unblocker</p>
+    <p>st0necutter</p>
   </div>
   <div class="themesExcluded">
     <h2>Version</h2>
@@ -49,8 +49,7 @@
 </div>
   <div class="themesExcluded">
     <h2>Developers</h2>
-    <p>Derpman</p>
-    <p>Fowntain</p>
+    <p>UNCENSORED06</p>
   </div>
   <div class="themesExcluded">
     <h2>Link Deployment Info</h2>
