--- a/static/loading.html
+++ b/static/loading.html
@@ -7,7 +7,7 @@
   <link rel="icon" id="icon" href="/assets/img/salyte.jpg">
   <link rel="stylesheet" href="/assets/css/app.css?v=1.8">
   <script src="/assets/js/anym.js?v=1.8"></script>
-  <title>Classroom</title>
+  <title>loading!</title>
   <style>
   .spinner {
     width: 60px;
